First stab at the new geometry engine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 cmake_minimum_required(VERSION 3.3)
 project(SuperTrackValidation VERSION 1.0.0)
+set(CMAKE_CXX_STANDARD 17)
 
 ###
 ### Find and include Geant4 libraries
